# ngs-pipeline

./: .dockerignore  Dockerfile  README.md  pyproject.toml  ref.fa  test.fa  test.fastq
.github/workflows/: ci.yml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: nodeids
src/ngs_pipeline/: cli.py  pipeline.py  qc.py  qc_cli.py
src/ngs_pipeline/experimental/: qc.py  qc_cli.py
tests/: test_pipeline.py
