[project]
name = "ngs-pipeline2"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "pysam (>=0.23.3,<0.24.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "ngs_pipeline", from = "src"}]

[project.scripts]
pipeline = "ngs_pipeline.cli:cli"